Update DNN and CNN.ipynb

--- a/DNN and CNN.ipynb
+++ b/DNN and CNN.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "- You are given a DNN model and fashion dataset. This model has overfitting problem.   \n",
     " REF: book \"Hand-On Machine Learning with Sk-learn, Keras, and Tensorflow\",   \n",
-    " Chapter 10: pp. 297-307. I put the book code together (in the notebook)\n",
+    " Chapter 10: pp. 297-307. \n",
     "   \n",
     "   \n",
     "- You are also given a link which provides you how to build a CNN model   \n",
