--- a/Logic_Gate_OR.ipynb
+++ b/Logic_Gate_OR.ipynb
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "# Code used for educational purposes from: https://towardsdatascience.com/6-steps-to-write-any-machine-learning-algorithm-from-scratch-perceptron-case-study-335f638a70f3\n",
     "# Perceptron function\n",
     "def perceptron(x, y, z, eta, t):\n",
     "    '''\n",
