--- a/Support_vector_machines.ipynb
+++ b/Support_vector_machines.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Chapter 5 – Support Vector Machines**\n",
     "\n",
-    "_This notebook contains all the sample code and solutions to the exercises in chapter 5._"
+    "_This notebook contains all the sample code and solutions to the exercises in chapter 5._",
     "_Code used for educational purposes is from book "Hands-On Machine Learning with Scikit-Learn, Keras, & TensorFlow" by Geron, or its repository referenced in the book._"
    ]
   },
