--- a/Support_vector_machines.ipynb
+++ b/Support_vector_machines.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "**Chapter 5 – Support Vector Machines**\n",
     "\n",
-    "_For educational purposes, this notebook contains sample code and solutions from book by Geron called Hands-On Machine Learning with Sckit-Learn, Keras & TensorFlow, or its solutions repository._",
+    "_For educational purposes, this notebook contains sample code and solutions from book by Geron called Hands-On Machine Learning with Sckit-Learn, Keras & TensorFlow, or its solutions repository._"
    ]
   },
   {
